# etc2comp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  common.pri  etc2comp.pro
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
BSIetc2/: README.md
BSIetc2/EtcLib/Etc/: Etc.cpp  Etc.h  EtcFilter.cpp
BSIetc2/EtcTool/: EtcSourceImage.cpp
EtcLib/: BUILD  CMakeLists.txt  EtcLib.pro  etclib_global.h
EtcLib/Etc/: Etc.cpp  Etc.h  EtcConfig.h  EtcFilter.cpp  EtcFilter.h  EtcImage.cpp  EtcImage.h
EtcLib/EtcCodec/: EtcBlock4x4.cpp  EtcBlock4x4.h  EtcBlock4x4Encoding.cpp  EtcBlock4x4Encoding.h  EtcBlock4x4Encoding_RGB8.cpp
EtcTestApp/: EtcTestApp.pro  main.cpp
EtcTool/: Args.txt  BUILD  CMakeLists.txt  EtcAnalysis.cpp  EtcComparison.cpp  EtcFile.cpp  EtcFile.h  EtcFileHeader.cpp  EtcFileHeader.h  EtcMemTest.cpp  EtcSourceImage.cpp  EtcSourceImage.h  EtcTool.cpp  EtcTool.h  EtcTool.pro  etctool_global.h
